@@ -1,6 +1,6 @@
-<title>ZXID SP Log Explorer Main</title>
-<link type="text/css" rel=stylesheet href="explo.css">
-<h1 class=zxtop>ZXID SP Log Explorer</h1>
+<title>ZXID IdP Attribute Selection / Privacy Manager</title>
+<link type="text/css" rel=stylesheet href="atsel.css">
+<h1 class=zxtop>ZXID Attribute Selection / Privacy Manager</h1>
 
 <table id=entconf>
 <tr><th colspan=2>Configuration of SP</th></tr>
@@ -21,6 +21,5 @@ Issued Receipts
 <a class=zx href="http://zxid.org/">ZXID.org</a>
 | <a class=zx href="http://www.tas3.eu/">TAS3.eu</a>
 | <a class=zx href="zxiddash.pl">User Dashboard</a>
-| <a class=zx href="zxidexplo.pl">SP Log Viewer</a>
 - <i>$Id$</i>
 </div>
