@@ -1,9 +1,11 @@
 <title>ZXID User Dashboard Main</title>
-<link type="text/css" rel=stylesheet href="zxidexplo.css">
-<h1>ZXID User Dashboard</h1>
-<hr>
-<a href="http://zxid.org/">ZXID.org</a>
-| <a href="http://www.tas3.eu/">TAS3.eu</a>
-| <a href="zxiddash.pl">User Dashboard</a>
-| <a href="zxidexplo.pl">SP Log Viewer</a><br>
-<i>$Id$</i>
+<link type="text/css" rel=stylesheet href="dash.css">
+<h1 class=zxtop>ZXID User Dashboard</h1>
+
+<div class=zxbot>
+<a class=zx href="http://zxid.org/">ZXID.org</a>
+| <a class=zx href="http://www.tas3.eu/">TAS3.eu</a>
+| <a class=zx href="zxiddash.pl">User Dashboard</a>
+| <a class=zx href="zxidexplo.pl">SP Log Viewer</a>
+- <i>$Id$</i>
+</div>
